--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -8,19 +8,19 @@
               <div class="item active">
                 <%= image_tag("srfsld2.jpg") %>               
                 <div class="carousel-caption2">
-                <p> <strong> <a href="categories/1">Surfing</a> </strong> </p>                  
+                <p> <strong> <a href="categories/surfing">Surfing</a> </strong> </p>                  
                 </div>
               </div>
               <div class="item">
                  <%= image_tag("ktsld4.jpg") %>                
                  <div class="carousel-caption2">
-                <p> <strong> <a href="categories/3">Kiteboarding</a>  </strong> </p>           
+                <p> <strong> <a href="categories/kiteboarding">Kiteboarding</a>  </strong> </p>           
                  </div>
               </div>
               <div class="item">
                 <%= image_tag("snbsldl3.jpg") %>                
                 <div class="carousel-caption2">
-               <p> <strong> <a href="categories/2">Snowboarding/Ski</a> </strong> </p>               
+               <p> <strong> <a href="categories/snowboard-ski">Snowboarding-Ski</a> </strong> </p>               
                 </div>
               </div>
             </div>
