--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,59 +1,51 @@
 <div class="tripshow">
   
   <div class="abouth">
-    <h2> Thrill Engine helps you find the right places to go for your next adventure trip </h2> 
+    <h3> Thrill Engine helps you find the right places to stay for your  adventure trip.  </h3> 
     <h4> Find by type of activity, budget and location.</h4>
   </div>
 
 <br></br>
  
-
-  <h3>How it is different ?</h3>
-  <br></br> 
-  <p>  Most travel sites are all about offering you the best price for the same listings. Thrill Engine is all about offering the best solution for your adventure.
-   
+  
+ <div class="row">
+   <div class="span8">
+  <h4>Why Thrill Engine?</h4>
+  <p>  Because planning an adventure trip can be a hustle ( this comes from experience).  So the idea was born out of desire to create things simpler and easier. 
   </p> 
 
-<br></br>
-
-  <h3> How much does it costs to get listed?</h3>
-  <br></br> 
-  <p>   starts at $99/year </p>
-  <p> Which includes: </p>
-
-    <ul>
-	   <li> Unlimited images  </li>
-	   <li> video  </li>
-	   <li> link back to your website  </li>	   
-	   <li> better rankings  </li>
-    </ul>
-
-<br></br>
-
-  <h3> Why pay ?</h3>
-  <br></br> 
-  <p>  That keeps the site high quality. You are one of few not one of many. It takes a lot of time and energy to check every listing. However there is a free plan with limited options available, please contact for more info. </p>
-  
-
-<br></br> 
-
-
-  <h3> How will be promoted ? </h3>
-  <br></br> 
-  <p> Combination of web-based advertising targeted at small/medium interest groups ( surfing, snowboarding kiteboarding and more to come), trough social media, and weekly email lists. </p>
-
-<br></br>
-
-  <h3> Who is behind this ? </h3>
-  <br></br> 
+  <h4> Who is behind this ? </h4>
   <p> Thrill Engine is developed, designed and promoted by <%= link_to "http://emiilsw.staticloud.com", "http://emiilsw.staticloud.com/" %> .</p>
 
-<br></br>
 
-  <h3> Contact: </h3>
-  <br></br> 
-  <p>  <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </p>
- 
+
+
+  <h4> Does it cost anything to be listed on Thrill Engine? </h4>  
+  <p>   There is a Pro listing for affordable $99/year (for limited time only). The Pro listing includes:</p>
+    <ul>
+	   <li> Unlimited images; </li>
+	   <li> A video; </li>
+	   <li> Your own social profile buttons; </li>	   
+	   <li> Priority listing.  </li>
+    </ul>
+  <p> And a free plan, with limited features - 5 images, basic information, no video, no links and rankings below pro profiles.  </p>
+
+
+  <h4> How will you be promoting Thrill Engine to potential guests? </h4>
+  <p>  Combination of web-based advertising targeted at small/medium interest groups ( surfing, snowboarding kiteboarding and more to come), and direct specific locations, also trough social media, and weekly email lists.
+  </p>
+
+  <h4> Contact: </h4>
+  <p> Want to get listed ? Got more questions ? Want to leave a feedback ? Contact me @ <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </p>
    </div>
+   
+  
+   <div class="span3">
+   	<div class="abouts"> 
+   	<h4> Why get listed on Thrill Engine ? </h4>
+   	<p>  It's new, fresh and you are one of few, not one of many. Quality over quantity. And most importantly Thrill Engine is here to help more potential  guests find you. It is being promoted to thousands of board sports enthusiasts, who are looking for places to stay on their next trip.   </p>
+    </div>
+  </div> 
+   
+  </div>
  </div>
-</div>
