--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -366,15 +366,31 @@ input, textarea, select, .uneditable-input {
 	
 	padding: 20px;
 	width: 180px;
-	height:50px;
+	height:90px;
 	float:right;
-	margin-top: -50px;
+	margin-top: -90px;
 	margin-right:10px;
 	font-size:16px;
 	font-weight: bold;
 	border: 1px dotted #ff3300;
 	
 }
+
+.price1 h3 {
+	
+	margin-top: -5px;
+	
+}
+
+.booking {
+       
+ 
+    padding:5px;
+    top:5px;         
+    background: url(lp.png);
+    
+}
+
 
 .location {
 	list-style: none;
@@ -502,13 +518,13 @@ input, textarea, select, .uneditable-input {
 #mc_embed_signup{ 
 	border-top: dotted 1px $grayMediumLight;
     margin-bottom: -50px;
-    background:  $grayMediumLight;
-    height: 50px;
+    color: #000;
+    height: 200px;
  }
 
 #mc_embed_signup ul { display:inline; }
 
 
-#mc_embed_signup ul li { float:left; list-style: none; margin-left: 20px;  margin-top: 0px;  }
+#mc_embed_signup ul li { float:left; list-style: none; margin-left: 25px;  margin-top: 0px;  }
 	
 
