--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,20 +4,7 @@
  
  
  <div class="border"> 
-     <ul>                        
-             <%= form_for @search do |f| %>             
-                                                 
-                <li class="droper">  <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
-                  
-               
-                 <li class="droper">  <%= f.collection_select :budget_id_in, Budget.all, :id, :name, :include_blank => true, :prompt => "All budgets" %>    </li>  
-                 
-                  <li class="droper">  <%= f.collection_select :types_id_equals, Type.all, :id, :name, :include_blank => true, :prompt => "All Types" %>    </li>
-                                              
-                <li class="droper">  <%= submit_tag "Find", :class => "btn btn-primary btn-large" %> </li>
-      	
-           <% end %>
-         </ul>
+     
   
    <div style="clear:both;"></div>
            
@@ -72,20 +59,31 @@ margin: 0 4% 15px 0;
 text-indent: 5px;
 width: 58%;
 min-width: 268px;
-margin-left: 6px;
+margin-left: 230px;
 line-height: 14px;
 border-radius: 3px;
+margin-top: 10px;
 }
 		
 #mc_embed_signup label {
 display: block;
-font-size: 18px;
+font-size: 22px;
 padding-bottom: 5px;
-font-weight: bold;
-margin-top: 5px;
+margin-top: 30px;
 margin-right: 10px;
-color:white;
+line-height:110%;
+color:#3b3b3b;
+
 }	
+
+
+#mc_embed_signup input.button {
+
+margin-top: 10px;	
+	
+}
+
+
 	
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
@@ -94,7 +92,7 @@ color:white;
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <ul>
   	
-	<li> <label for="mce-EMAIL">Join the list and get exclusive updates</label> </li>
+	<li> <label for="mce-EMAIL"> Thrill Engine features places that can give that little extra "something" for a much better action holiday, whether it's design, quality, location, food, services offered, hospitality ... Sign up and get exclusive updates</label> </li>
 	<li> <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required > </li>
 	<li> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> </li>
  
@@ -104,6 +102,6 @@ color:white;
 </div>
 
 <!--End mc_embed_signup-->
- 
+
    	
   
