--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -92,7 +92,7 @@ margin-top: 10px;
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <ul>
   	
-	<li> <label for="mce-EMAIL"> Thrill Engine features places that can give that little extra "something" for a much better action holiday, whether it's design, quality, location, food, services offered, hospitality ... Sign up and get exclusive updates</label> </li>
+	<li> <label for="mce-EMAIL"> Thrill Engine features places that can literally change your life .... Sign up and get On Board!</label> </li>
 	<li> <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required > </li>
 	<li> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> </li>
  
