--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
  <div class="row">
   <div class="span7">
   <small>
-   <p> &copy; 2012.  Thrill Engine is All About Trips That Will Make You Feel Alive.  <%= link_to "More →", about_path %> </p>
+   <p> &copy; 2012. All About Trips That Will Make You Feel Alive.  <%= link_to "More →", about_path %> </p>
     
     <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FThrill-Engine%2F199223676806364&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px; margin-top:15px; " allowtransparency="true"></iframe>    
   </small>     
