--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -58,7 +58,7 @@ $lightGray: #999;
 }
 
 .carousel-caption2 {
-    background: none;	
+    background: none;   	
 	font-size: 24px;		
 	position: absolute;
     left: 65px;
@@ -70,8 +70,9 @@ $lightGray: #999;
 
 .carousel-caption2 a {
 		
-	font-size: 18px; 
-	
+	font-size:26px; 
+	background: #000;
+	padding: 5px;	
 	
 }
 
