--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -8,19 +8,19 @@
               <div class="item active">
                 <%= image_tag("srfsld2.jpg") %>               
                 <div class="carousel-caption2">
-                <p> <strong> <a href="categories/surfing">Surfing</a> </strong> </p>                  
+                <p> <strong> <a href="categories/surfing">Surf trip</a> </strong>  </p>                  
                 </div>
               </div>
               <div class="item">
                  <%= image_tag("ktsld4.jpg") %>                
                  <div class="carousel-caption2">
-                <p> <strong> <a href="categories/kiteboarding">Kiteboarding</a>  </strong> </p>           
+                <p> <strong> <a href="categories/kiteboarding">Kite trip</a>  </strong> </p>           
                  </div>
               </div>
               <div class="item">
                 <%= image_tag("snbsldl3.jpg") %>                
                 <div class="carousel-caption2">
-               <p> <strong> <a href="categories/snowboard-ski">Snowboarding-Ski</a> </strong> </p>               
+               <p> <strong> <a href="categories/snowboard-ski">Snow trip</a> </strong> </p>               
                 </div>
               </div>
             </div>
@@ -30,7 +30,7 @@
   
               <div class="headline">    
                 <h1> Epic Holidays  </h1>  
-                <p class="lead"> Find the Right Place to Stay for Your Next Adventure </p>  
+                <p class="lead"> The Right Places to Go for Your Next </p>  
               </div>
   
    
@@ -43,16 +43,16 @@
   <div class="border">    
    
          <ul>                        
-             <%= form_for @search do |f| %>             
+             <%= form_for @search do |f| %> 
+             
+                <li class="droper"> Featured places: </li>            
                                                  
                 <li class="droper">  <%= f.collection_select :location_id_equals, Location.order('country ASC').all, :id, :name, :include_blank => true, :prompt => "All locations" %>    </li>                
 
-                <li class="droper">   <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All categories"  %>  </li>     
+                <li class="droper">   <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true, :prompt => "All sports"  %>  </li>     
                 
                  <li class="droper">  <%= f.collection_select :budget_id_in, Budget.all, :id, :name, :include_blank => true, :prompt => "All budgets" %>    </li>                
-
-                 <li class="droper">  <%= f.collection_select :types_id_equals, Type.all, :id, :name, :include_blank => true, :prompt => "All Types" %>    </li>
-                
+                               
                 <li class="droper">  <%= submit_tag "Find", :class => "btn btn-primary btn-large" %> </li>
       	
            <% end %>
@@ -138,7 +138,7 @@ margin-top: 10px;
 		
 #mc_embed_signup label {
 display: block;
-font-size: 22px;
+font-size: 26px;
 padding-bottom: 5px;
 margin-top: 30px;
 margin-right: 10px;
@@ -163,7 +163,7 @@ margin-top: 10px;
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <ul>
   	
-	<li> <label for="mce-EMAIL"> Thrill Engine features places that can give that little extra "something" for a much better action holiday, whether it's design, quality, location, food, services offered, hospitality ... Sign up and get exclusive updates!</label> </li>
+	<li> <label for="mce-EMAIL"> Thrill Engine features places that can literally change your life .... Sign up and get on board!</label> </li>
 	<li> <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required > </li>
 	<li> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> </li>
  
