--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
   
   <div class="field">
-    <%= f.label :country %><br />
-    <%= f.text_field :country %>
+    <%= f.label :country_id %><br />
+    <%= f.text_field :country_id %>
   </div>
   
  <div class="field">
