--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,8 +31,7 @@ Specially for You </h1>
 
 <div class="why">
 
-<h3> Searching and browsing websites before booking a holiday can be a pain in the A##. 
-	Thrill Engine is here to help you. Sit back and relax, and receive the offers in your inbox. 	
+<h3> Thrill Engine is here to help you find that awesome adventure you are looking for, that fits your budget and expectations 	
 	</h3>
 
 
@@ -59,7 +58,7 @@ margin: 0 4% 15px 0;
 text-indent: 5px;
 width: 58%;
 min-width: 268px;
-margin-left: 230px;
+margin-left: 250px;
 line-height: 14px;
 border-radius: 3px;
 margin-top: 10px;
@@ -72,7 +71,7 @@ padding-bottom: 5px;
 margin-top: 30px;
 line-height:110%;
 text-align:center;
-margin-left: 100px;
+margin-left: 110px;
 
 }	
 
@@ -95,7 +94,7 @@ margin-top: 10px;
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <ul>
   	
-	<li> <label for="mce-EMAIL"> Not ready to book? Sign up and hear about new listings, places, updates & more!</label> </li>
+	<li> <label for="mce-EMAIL"> Not ready to book? Sign up for free and get updates about new listings, tips and offers!</label> </li>
 	<li> <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required > </li>
 	<li> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> </li>
  
@@ -106,5 +105,5 @@ margin-top: 10px;
 
 <!--End mc_embed_signup-->
 
-<p align="right"> Check out <a href="trips">  Current listings → </a>  </strong> </p>
+<p align="right"> Browse <a href="trips">  current listings → </a>  </strong> </p>
   
