--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -76,9 +76,15 @@ $lightGray: #999;
 	
 }
 
+.carousel-inner {
+	
+	height:415px;
+}
+
 #myCarousel {
 	
 	margin-bottom: 0px;
+	
 	  	
 }
 
@@ -331,7 +337,7 @@ input, textarea, select, .uneditable-input {
  
 .price {	
 	margin-left:340px;
-	margin-top:-48px;
+	margin-top:-58px;
 	line-height:40%
 	
 }  
@@ -542,7 +548,7 @@ input, textarea, select, .uneditable-input {
 	
 	width: 300px;
 	text-shadow: 0px 0px 21px rgba(0, 0, 0, 0.6);
-	font-size: 38px;
+	font-size: 46px;
 	
 	
 }
