--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <div class="tripshow">
   
   <div class="abouth">
-    <h3> Thrill Engine helps you find the right places to stay for your  adventure trip.  </h3> 
+    <h3> Thrill Engine helps you find the right places to go for epic adventures.  </h3> 
     <h4> Find by type of activity, budget and location.</h4>
   </div>
 
@@ -14,37 +14,22 @@
   <p>  Because planning an adventure trip can be a hustle ( this comes from experience).  So the idea was born out of desire to create things simpler and easier. 
   </p> 
 
+
   <h4> Who is behind this ? </h4>
   <p> Thrill Engine is developed, designed and promoted by <%= link_to "http://emiilsw.staticloud.com", "http://emiilsw.staticloud.com/" %> .</p>
 
 
 
 
-  <h4> Does it cost anything to be listed on Thrill Engine? </h4>  
-  <p>   There is a Pro listing for affordable $99/year (for limited time only). The Pro listing includes:</p>
-    <ul>
-	   <li> Unlimited images; </li>
-	   <li> A video; </li>
-	   <li> Your own social profile buttons; </li>	   
-	   <li> Priority listing.  </li>
-    </ul>
-  <p> And a free plan, with limited features - 5 images, basic information, no video, no links and rankings below pro profiles.  </p>
-
-
-  <h4> How will you be promoting Thrill Engine to potential guests? </h4>
-  <p>  Combination of web-based advertising targeted at small/medium interest groups ( surfing, snowboarding kiteboarding and more to come), and direct specific locations, also trough social media, and weekly email lists.
-  </p>
+  
 
   <h4> Contact: </h4>
-  <p> Want to get listed ? Got more questions ? Want to leave a feedback ? Contact me @ <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </p>
+  <p> Got more questions ? Want to leave a feedback ? Contact me @ <%= mail_to "emils.veveris@thrillengine.com", "emils.veveris@thrillengine.com" %>  </p>
    </div>
    
   
    <div class="span3">
-   	<div class="abouts"> 
-   	<h4> Why get listed on Thrill Engine ? </h4>
-   	<p>  It's new, fresh and you are one of few, not one of many. Quality over quantity. And most importantly Thrill Engine is here to help more potential  guests find you. It is being promoted to thousands of board sports enthusiasts, who are looking for places to stay on their next trip.   </p>
-    </div>
+   
   </div> 
    
   </div>
