--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
       <%= link_to logo, root_path, id: "logo" %>      
       <nav>
         <ul class="nav pull-right nav-pills">          
-          <li> <%= link_to "The Concept", about_path %>  </li>         
+          <li> <%= link_to "The Concept", about_path %>  </li>
+          <li> <%= link_to "Advertise/Get listed", advertise_path %>  </li>        
           <li><%= link_to "Inspiration", "http://thrillengine.tumblr.com" %>  </li>
          <% if signed_in? %>
           <li><%= link_to "Profile", current_user %>  </li>
