--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -29,7 +29,7 @@
           </div>
   
               <div class="headline">    
-                <h1> Epic Holidays  </h1>  
+                <h1> Epic Adventures  </h1>  
                 <p class="lead"> The Right Places to Go for Your Next </p>  
               </div>
   
