--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,6 +12,7 @@
    <div class="span8">
   <h4>Why Thrill Engine?</h4>
   <p>  Because planning an adventure trip can be a hustle ( this comes from experience).  So the idea was born out of desire to create things simpler and easier. 
+  Read more about the story <%= link_to "here", "http://www.new-startups.com/travel/if-airbnb-is-a-marketplace-for-space-then-thrill-engine-is-a-marketplace-for-thrills/" %> .</p>
   </p> 
 
 
