--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -39,7 +39,7 @@
  
  <div class="price1"> 
         <h3> <small> from </small> </h3>
-        <h3>  <%= @trip.price %>  <small> /week </small>   </h3>
+        <h3>  <%= @trip.budget %>  <small> /week </small>   </h3>
         <div class="booking">
   	 	   <a class="book_button" data-toggle="modal" href="#myModal" > Reserve Online </a> 	 	                                
         </div>
@@ -47,8 +47,9 @@
  
  <br></br>
  
- <%= link_to @trip.url, (@trip.url) %>
- 
+ <% if @trip.url.present? %>
+ <%= link_to "Visit Website", (@trip.url) %>
+ <% end %>
  
  
  <div class="tripcard">
@@ -221,7 +222,7 @@
 
    </div>
 </div>
-<a class="book_button" data-toggle="modal" href="#myModal" >Take Me There</a>
+<a class="book_button" data-toggle="modal" href="#myModal" >Reserve Online</a>
 
 
 
