--- a/app/views/pages/advertise.html.erb
+++ b/app/views/pages/advertise.html.erb
@@ -15,22 +15,27 @@
 
   <h4> Does it cost anything to be listed on Thrill Engine? </h4>
   
-  <p> It's free to get started. The basic profile is based on 15% commission per booking and includes: </p> 
+  <p> It's free to get started. The <b> basic profile </b> is based on 10% fee per booking and includes: </p> 
   
     <ul>
-	   <li> 5 images; </li>
-	   <li> Your website link; </li>
+	   <li> 5 images; </li>	   
 	   <li> Basic information. </li>	   	 
     </ul>
     
-  <p>   There is a Pro listing for $99/year (for limited time only). The Pro listing includes:</p>
-    <ul>
-	   <li> Unlimited images; </li>
-	   <li> A video; </li>
-	   <li> Your own social profile buttons; </li>	   
-	   <li> No booking fees. </li>
-    </ul>
+ <p> For additional $29/year you get: </p>
   
+    <ul>
+       <li> Your website link; </li>
+       <li> Unlimited images; </li>
+	   <li> A video; </li>
+	   <li> Your own social profile buttons; </li>
+	   <li> Sponsored Tweet & Facebook Post, with a reach of 2.3k adventurers. </li>
+   </ul>  
+	       
+  <p> <b> Pro profile </b> is for $99/year, including all the things above and additionally no booking fees.</p>
+    
+   
+    
   <h4> How will you be promoting Thrill Engine to potential guests? </h4>
   <p>  Combination of web-based advertising targeted at small/medium interest groups ( surfing, snowboarding kiteboarding and more to come), and direct specific locations, also trough social media, and weekly email lists.
   </p>
