--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -83,7 +83,7 @@
               <h3><%= link_to trip.title, trip %> </h3>
               <p><%= trip.location %>  </p>
              <div class="price">        
-             <p class="pull-right">  <h3>  <%= trip.price %> </h3> /week  </p>
+             <p class="pull-right">  <h5>  <%= trip.budget %> </h5> /week  </p>
              
             </div>
           </div>
@@ -163,7 +163,7 @@ margin-top: 10px;
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <ul>
   	
-	<li> <label for="mce-EMAIL"> Thrill Engine features places that can literally change your life .... Sign up and get on board!</label> </li>
+	<li> <label for="mce-EMAIL"> Thrill Engine features places that can literally change your life .... Sign up for the Newsletter!</label> </li>
 	<li> <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required > </li>
 	<li> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> </li>
  
@@ -239,7 +239,7 @@ margin-top: 10px;
 </style>
 <div id="mc_embed_signup">
 <form action="http://thrillengine.us4.list-manage.com/subscribe/post?u=b00a6ce905026bcb1bfd68811&amp;id=ffa803ed98" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	<label for="mce-EMAIL">Thrill Engine is Here to Let You Know Where to Go for Adventures That Matter. Get on board for free now!</label>
+	<label for="mce-EMAIL">Thrill Engine is Here to Let You Know Where to Go for Adventures That Matter. Sign up for the Newsletter!</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
