--- a/app/views/pages/advertise.html.erb
+++ b/app/views/pages/advertise.html.erb
@@ -22,7 +22,7 @@
 	   <li> Basic information. </li>	   	 
     </ul>
     
- <p> For additional $29/year you get: </p>
+ <p> Pro profile is for $49/year and you additionally get: </p>
   
     <ul>
        <li> Your website link; </li>
@@ -32,10 +32,7 @@
 	   <li> Sponsored Tweet & Facebook Post, with a reach of 2.3k adventurers. </li>
    </ul>  
 	       
-  <p> <b> Pro profile </b> is for $99/year, including all the things above and additionally no booking fees.</p>
-    
-   
-    
+          
   <h4> How will you be promoting Thrill Engine to potential guests? </h4>
   <p>  Combination of web-based advertising targeted at small/medium interest groups ( surfing, snowboarding kiteboarding and more to come), and direct specific locations, also trough social media, and weekly email lists.
   </p>
