--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -83,7 +83,7 @@
               <h3><%= link_to trip.title, trip %> </h3>
               <p><%= trip.location %>  </p>
              <div class="price">        
-             <p class="pull-right">  <h5>  <%= trip.budget %> </h5> /week  </p>
+             <p class="pull-right">  <h6>  <%= trip.price %> </h6> per person/week </p>
              
             </div>
           </div>
